Dropdown z-index fix

--- a/app/assets/stylesheets/_bootstyle.css.scss
+++ b/app/assets/stylesheets/_bootstyle.css.scss
@@ -3,6 +3,11 @@
   font-size: 85%;
 }
 
+// Dropdown Navigation
+.dropdown-menu {
+  z-index: 9999;
+}
+
 // Alert BG Colors
 .success {
   background-color: #DFF0D8 !important;
