--- a/app/assets/stylesheets/_majoostyle.css.scss
+++ b/app/assets/stylesheets/_majoostyle.css.scss
@@ -102,7 +102,7 @@ input {
       max-height: 100%;
       width: 100%;
       max-width: 100%;
-      z-index: 9999;
+      z-index: 1;
     }
   }
 }
